--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,22 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container {
+  display: flex;
+}
+
+/* サイドバーの隣にメインコンテンツを配置 */
+.content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* 水平方向の中央寄せ */
+  justify-content: center; /* 垂直方向の中央寄せ */
+  padding: 20px;
+}
+
+.todolist {
+  width: 300px; /* 必要に応じて幅を調整 */
+  margin-top: 20px;
+}
